--- a/paper/mis_paper.tex
+++ b/paper/mis_paper.tex
@@ -392,7 +392,9 @@ The architecture leverages only mature Linux kernel primitives, enabling deploym
 \begin{thebibliography}{99}
 
 \bibitem{mis2026github}
-S.~Defis, ``MIS: Modular Intelligence Spaces,'' \url{https://github.com/defi-hub/MIS}, 2026.
+S.~Defis, ``MIS: Modular Intelligence Spaces,'' 
+Zenodo, 2026. 
+DOI: \href{https://doi.org/10.5281/zenodo.18381505}{10.5281/zenodo.18381505}
 
 \bibitem{park2023generative}
 J.~S. Park et al., ``Generative Agents: Interactive Simulacra of Human Behavior,'' in \textit{UIST '23}, 2023.
